# ComponentBasedGame

./: .gitignore  CMakeLists.txt  Engine.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  README.md  Transform.cpp  Transform.h  myMain.cpp
Components/: Animator.cpp  Animator.h  Camera.cpp  Camera.h  CharacterController.cpp  CharacterController.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Renderer.cpp  Renderer.h  SlimeController.cpp  UIDocument.cpp  UIDocument.h  UIElement.cpp  UIElement.h
Managers/Animation/: AnimatorGraph.cpp  AnimatorTreeLoader.cpp  AnimatorTreeLoader.h
Managers/Collisions/: CollisionsManager.cpp  CollisionsManager.h
Managers/Input/: InputAction.cpp  InputAction.h  InputManager.cpp  InputManager.h
Managers/Render/: RenderManager.cpp  RenderManager.h
Managers/Scene/: ComponentFactory.cpp  ComponentFactory.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Managers/UI/: UIManager.cpp  UIManager.h
exceptions/: IllegalOperationException.cpp  IllegalOperationException.h
resources/animations/: slimeAnimator.xml
resources/animations/character/: characterAnimationTree.xml  moveBlendTree.xml
resources/config/: input-config.xml
resources/prefabs/: player.xml  slime.xml
resources/scenes/: scene.xml
src/core/: CMakeLists.txt  Game.cpp  Game.h  myMain.cpp
src/core/Assets/: GameObject.cpp  GameObject.h
src/core/Assets/Components/: Camera.cpp  Camera.h  CharacterController.cpp  CharacterController.h  Component.cpp  Component.h  Controller.cpp  Controller.h  Renderer.cpp  Renderer.h  SlimeController.cpp  SlimeController.h  Transform.cpp  Transform.h
src/core/Assets/Components/AnimationHandling/: Animator.cpp  Animator.h  AnimatorGraph.cpp  AnimatorGraph.h  AnimatorTreeLoader.cpp  AnimatorTreeLoader.h
src/core/Assets/Components/CollisionsHandling/: Collider.cpp  Collider.h  CollisionsManager.cpp  CollisionsManager.h
src/core/InputManagement/: InputAction.cpp  InputAction.h  InputManager.cpp  InputManager.h
src/core/Managers/: RenderManager.cpp  RenderManager.h
src/core/SceneManagement/: SceneManager.cpp  SceneManager.h
src/core/exceptions/: IllegalOperationException.h
src/engine/: CMakeLists.txt  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Transform.cpp
src/engine/Components/: Animator.cpp  Camera.cpp  CharacterController.cpp  Collider.h  Component.h  Controller.cpp  Controller.h  SlimeController.h
src/engine/Managers/Animation/: AnimatorGraph.cpp  AnimatorGraph.h
src/engine/Managers/Collisions/: CollisionsManager.cpp  CollisionsManager.h
src/engine/Managers/Scene/: SceneManager.h
src/engine/exceptions/: IllegalOperationException.cpp
src/main/: CMakeLists.txt  mainLauncher.cpp
src/test/: CMakeLists.txt  collisionsManagerTest.cpp  inputManagerTest.cpp  sceneManagerTest.cpp  unitTests.cpp
