add_library(lib_engine
        myMain.cpp
        myMain.h
        GameObject.cpp
        GameObject.h
        Components/Component.cpp
        Components/Component.h
        Transform.cpp
        Transform.h
        Game.cpp
        Game.h
        Components/Renderer.cpp
        Components/Renderer.h
        Managers/Scene/SceneManager.cpp
        Managers/Scene/SceneManager.h
        Managers/Input/InputManager.cpp
        Managers/Input/InputManager.h
        Managers/Input/InputAction.cpp
        Managers/Input/InputAction.h
        Components/Controller.cpp
        Components/Controller.h
        Components/Animator.cpp
        Components/Animator.h
        Managers/Animation/AnimatorGraph.cpp
        Managers/Animation/AnimatorGraph.h
        Managers/Animation/AnimatorTreeLoader.cpp
        Managers/Animation/AnimatorTreeLoader.h
        exceptions/IllegalOperationException.cpp
        exceptions/IllegalOperationException.h
        Components/Collider.cpp
        Components/Collider.h
        Managers/Collisions/CollisionsManager.cpp
        Managers/Collisions/CollisionsManager.h
        Components/CharacterController.cpp
        Components/CharacterController.h
        Components/SlimeController.cpp
        Components/SlimeController.h
        Components/Camera.cpp
        Components/Camera.h
        Managers/Render/RenderManager.cpp
        Managers/Render/RenderManager.h
        Managers/Scene/ComponentFactory.cpp
        Managers/Scene/ComponentFactory.h
)
target_include_directories(lib_engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(lib_engine PUBLIC pugixml sfml-graphics)

