add_library(lib_core
        myMain.cpp
        myMain.h
        Assets/GameObject.cpp
        Assets/GameObject.h
        Assets/Components/Component.cpp
        Assets/Components/Component.h
        Assets/Components/Transform.cpp
        Assets/Components/Transform.h
        Game.cpp
        Game.h
        Assets/Components/Renderer.cpp
        Assets/Components/Renderer.h
        SceneManagement/SceneManager.cpp
        SceneManagement/SceneManager.h
        InputManagement/InputManager.cpp
        InputManagement/InputManager.h
        InputManagement/InputAction.cpp
        InputManagement/InputAction.h
        Assets/Components/Controller.cpp
        Assets/Components/Controller.h
        Assets/Components/AnimationHandling/Animator.cpp
        Assets/Components/AnimationHandling/Animator.h
        Assets/Components/AnimationHandling/AnimatorGraph.cpp
        Assets/Components/AnimationHandling/AnimatorGraph.h
        Assets/Components/AnimationHandling/AnimatorTreeLoader.cpp
        Assets/Components/AnimationHandling/AnimatorTreeLoader.h
        exceptions/IllegalOperationException.cpp
        exceptions/IllegalOperationException.h
        "Assets/Components/CollisionsHandling/Collider.cpp"
        "Assets/Components/CollisionsHandling/Collider.h"
        Assets/Components/CollisionsHandling/CollisionsManager.cpp
        Assets/Components/CollisionsHandling/CollisionsManager.h
        Assets/Components/CharacterController.cpp
        Assets/Components/CharacterController.h
        Assets/Components/SlimeController.cpp
        Assets/Components/SlimeController.h
)
target_include_directories(lib_core PUBLIC ./)
target_link_libraries(lib_core PUBLIC pugixml sfml-graphics)

